--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.11.12",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.11.14",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
     "peer": "^0.6.1",
     "react-copy-to-clipboard": "^5.1.0",
     "simple": "^0.2.0",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
   }
