--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/material": "^5.11.14",
     "cors": "^2.8.5",
@@ -27,9 +28,13 @@
     "nodemon": "^2.0.21",
     "peer": "^0.6.1",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-icons": "^4.8.0",
     "simple": "^0.2.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.1"
   }
 }
